etc/gateway-api/gateway-envoy-http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
name: test_application
namespace: test_app
spec:
parentRefs:
- name: flex-gateway
  sectionName: http
  namespace: envoy-gateway-system
hostnames:
- "test_application.sjc.your.domain.tld"
rules:
  - backendRefs:
    - name: test_application
      port: 8774
