etc/gateway-api/gateway-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http2https-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: http2https
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: http-wildcard-listener
    namespace: nginx-gateway
  hostnames:
  - "*.your.domain.tld"
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-barbican-gateway-route
  namespace: openstack
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: barbican-https
    namespace: nginx-gateway
  hostnames:
  - "barbican.your.domain.tld"
  rules:
    - backendRefs:
      - name: barbican-api
        port: 9311
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-cinder-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: cinder
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: cinder-https
    namespace: nginx-gateway
  hostnames:
  - "cinder.your.domain.tld"
  rules:
    - backendRefs:
      - name: cinder-api
        port: 8776
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-glance-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: glance
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: glance-https
    namespace: nginx-gateway
  hostnames:
  - "glance.your.domain.tld"
  rules:
    - backendRefs:
      - name: glance-api
        port: 9292
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-cloudformation-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: cloudformation
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: cloudformation-https
    namespace: nginx-gateway
  hostnames:
  - "cloudformation.your.domain.tld"
  rules:
    - backendRefs:
      - name: heat-cfn
        port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-heat-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: heat
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: heat-https
    namespace: nginx-gateway
  hostnames:
  - "heat.your.domain.tld"
  rules:
    - backendRefs:
      - name: heat-api
        port: 8004
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-keystone-gateway-route
  namespace: openstack
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: keystone-https
    namespace: nginx-gateway
  hostnames:
  - "keystone.your.domain.tld"
  rules:
    - backendRefs:
      - name: keystone-api
        port: 5000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-neutron-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: neutron
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: neutron-https
    namespace: nginx-gateway
  hostnames:
  - "neutron.your.domain.tld"
  rules:
    - backendRefs:
      - name: neutron-server
        port: 9696
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-octavia-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: octavia
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: octavia-https
    namespace: nginx-gateway
  - name: flex-gateway
    sectionName: http-wildcard-listener
    namespace: nginx-gateway
  hostnames:
  - "octavia.your.domain.tld"
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
    - backendRefs:
      - name: octavia-api
        port: 9876
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-placement-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: placement
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: placement-https
    namespace: nginx-gateway
  hostnames:
  - "placement.your.domain.tld"
  rules:
    - backendRefs:
      - name: placement-api
        port: 8778
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-metadata-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: nova-metadata
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: metadata-https
    namespace: nginx-gateway
  hostnames:
  - "metadata.your.domain.tld"
  rules:
    - backendRefs:
      - name: nova-metadata
        port: 8775
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-nova-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: nova
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: nova-https
    namespace: nginx-gateway
  hostnames:
  - "nova.your.domain.tld"
  rules:
    - backendRefs:
      - name: nova-api
        port: 8774
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-novnc-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: novnc
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: novnc-https
    namespace: nginx-gateway
  hostnames:
  - "novnc.your.domain.tld"
  rules:
    - backendRefs:
      - name: nova-novncproxy
        port: 6080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-skyline-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: skyline
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: skyline-https
    namespace: nginx-gateway
  hostnames:
  - "skyline.your.domain.tld"
  rules:
    - backendRefs:
      - name: skyline-apiserver
        port: 9999
